// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select> (Downshift) should allow removal of components by passing a void function 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-53-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-53-menu"
        aria-invalid="false"
        aria-labelledby="downshift-53-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-53-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      />
    </div>
    <ul
      aria-labelledby="downshift-53-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-53-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should group items by groupKey if given 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-111-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-111-menu"
        aria-invalid="false"
        aria-labelledby="downshift-111-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-111-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-111-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-111-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-111-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have a loading indicator 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-54-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-54-menu"
        aria-invalid="false"
        aria-labelledby="downshift-54-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-54-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="LoadingStyle__LoadingContainer-fg2qx3-0 ioHJOi aries-loading SelectStyle__LoadingIndicator-qr1jv6-8 bMMiQb"
          data-testid="loading-indicator"
          role="alert"
        >
          <div
            class="LoadingStyle__Spinner-fg2qx3-1 fQRrhB"
          />
        </div>
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-54-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-54-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-54-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an invalid state 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <label
      class="SelectStyle__Label-qr1jv6-1 jHMhiv"
      data-active="false"
      data-disabled="false"
      data-invalid="true"
      data-testid="label"
      for="downshift-94-input"
      id="downshift-94-label"
    >
      Foo
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-94-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="true"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-94-menu"
        aria-describedby="description-32"
        aria-invalid="true"
        aria-labelledby="downshift-94-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-94-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-94-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-94-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-94-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
    <span
      class="SelectStyle__HelperText-qr1jv6-12 eIDHSV"
      data-invalid="true"
      data-testid="helper-text"
      id="description-32"
    >
      Invalid
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an optional helper-text 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-62-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-62-menu"
        aria-describedby="description-20"
        aria-invalid="false"
        aria-labelledby="downshift-62-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-62-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-62-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-62-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-62-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
    <span
      class="SelectStyle__HelperText-qr1jv6-12 eIDHSV"
      data-invalid="false"
      data-testid="helper-text"
      id="description-20"
    >
      foo
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an optional label 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <label
      class="SelectStyle__Label-qr1jv6-1 jHMhiv"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="label"
      for="downshift-64-input"
      id="downshift-64-label"
    >
      foo
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-64-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-64-menu"
        aria-invalid="false"
        aria-labelledby="downshift-64-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-64-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-64-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-64-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-64-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should have an optional placeholder 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-63-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-63-menu"
        aria-invalid="false"
        aria-labelledby="downshift-63-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-63-input"
        placeholder="foo"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-63-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-63-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-63-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should match snapshot when closed 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-1-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-1-menu"
        aria-invalid="false"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-1-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-1-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-1-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-1-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should match snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="downshift-2-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-2-menu"
        aria-invalid="false"
        aria-labelledby="downshift-2-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-2-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-2-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-2-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-2-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-2-item-0"
        role="option"
        title="Software Engineer0"
      >
        Software Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-2-item-1"
        role="option"
        title="Software Tester1"
      >
        Software Tester
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-2-item-2"
        role="option"
        title="Back-end Engineer2"
      >
        Back-end Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-2-item-3"
        role="option"
        title="Front-end Engineer3"
      >
        Front-end Engineer
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) should use custom subcomponents when provided 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <label
      class="SelectStyle__Label-qr1jv6-1 jHMhiv"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-test="bar"
      data-testid="label"
      for="downshift-51-input"
      id="downshift-51-label"
    >
      i am label
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="downshift-51-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-51-menu"
        aria-invalid="false"
        aria-labelledby="downshift-51-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-51-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-51-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-51-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-51-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        data-test="foo"
        id="downshift-51-item-0"
        role="option"
        title="Software Engineer0"
      >
        Software Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        data-test="foo"
        id="downshift-51-item-1"
        role="option"
        title="Software Tester1"
      >
        Software Tester
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        data-test="foo"
        id="downshift-51-item-2"
        role="option"
        title="Back-end Engineer2"
      >
        Back-end Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        data-test="foo"
        id="downshift-51-item-3"
        role="option"
        title="Front-end Engineer3"
      >
        Front-end Engineer
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) when disableTyping is true should not accept text input 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-66-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-66-menu"
        aria-invalid="false"
        aria-labelledby="downshift-66-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-66-input"
        readonly=""
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-66-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-66-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-66-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) when isOpenInitially=true should be open on render 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="downshift-55-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="true"
      data-disabled="false"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-55-menu"
        aria-invalid="false"
        aria-labelledby="downshift-55-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        id="downshift-55-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          id="downshift-55-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.8 80.8 0 69 50 19 100 69 88.2 80.8 50 42.4"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-55-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-55-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-55-item-0"
        role="option"
        title="Software Engineer0"
      >
        Software Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-55-item-1"
        role="option"
        title="Software Tester1"
      >
        Software Tester
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-55-item-2"
        role="option"
        title="Back-end Engineer2"
      >
        Back-end Engineer
      </li>
      <li
        aria-selected="false"
        class="SelectStyle__Item-qr1jv6-10 iabMNy"
        id="downshift-55-item-3"
        role="option"
        title="Front-end Engineer3"
      >
        Front-end Engineer
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Select> (Downshift) when it is disabled should have disabled styles and attributes 1`] = `
<DocumentFragment>
  <div
    class="SelectStyle__Container-qr1jv6-0 faXYfy"
    data-testid="container"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-65-menu"
      class="SelectStyle__Combobox-qr1jv6-2 bvcZlQ"
      data-active="false"
      data-disabled="true"
      data-invalid="false"
      data-testid="combobox"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-65-menu"
        aria-invalid="false"
        aria-labelledby="downshift-65-label"
        autocomplete="off"
        class="SelectStyle__Input-qr1jv6-3 llfDsg"
        data-testid="input"
        disabled=""
        id="downshift-65-input"
        value=""
      />
      <div
        class="SelectStyle__IndicatorsContainer-qr1jv6-4 hZrLeS"
        data-testid="indicators-container"
      >
        <button
          aria-label="toggle menu"
          class="SelectStyle___IndicatorButton-qr1jv6-5 SelectStyle__ToggleButton-qr1jv6-7 cdsRlh"
          data-testid="toggle-button"
          disabled=""
          id="downshift-65-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <polygon
              points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      aria-labelledby="downshift-65-label"
      class="SelectStyle__Menu-qr1jv6-9 eIBExb"
      data-testid="menu"
      id="downshift-65-menu"
      role="listbox"
    >
      <li
        class="SelectStyle__EmptyList-qr1jv6-11 jbauMg"
        data-testid="empty-list"
      >
        No results found. Try another keyword to search for.
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
